--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,44 @@
 <!-- HEADER -->
 <header>
-
+    <div class="mbox">
+        <div class="top-head">
+            <div class="logo">
+                <a href="#">
+                    <img src="images/logo.png" alt="">
+                    <span class="logo-flag">
+                        <img src="images/logo-flag.png" alt="">
+                    </span>
+                </a>
+            </div>
+            <div class="baner">
+                <a href="#">
+                    <img src="images/baner-1.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="bottom-head">
+            <nav>
+                <ul>
+                    <li class="active"><a href="#"><span>Home</span></a></li>
+                    <li><a href="#"><span>Bonuses</span></a></li>
+                    <li><a href="#"><span>Casinos</span></a></li>
+                    <li><a href="#"><span>Bookies</span></a></li>
+                    <li><a href="#"><span>News</span></a></li>
+                    <li><a href="#"><span>Subscribe</span></a></li>
+                    <li><a href="#"><span>Join Now</span></a></li>
+                    <li><a href="#"><span>Login</span></a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <ul>
+                    <li><a href="#" target="_blank"><img src="images/social-1.png" alt=""></a></li>
+                    <li><a href="#" target="_blank"><img src="images/social-2.png" alt=""></a></li>
+                    <li><a href="#" target="_blank"><img src="images/social-3.png" alt=""></a></li>
+                    <li><a href="#" target="_blank"><img src="images/social-4.png" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </header>
 <!-- /HEADER -->
 
