--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,6 +2,141 @@
 <div class="footer_placeholder"></div>
 <footer class="footer">
 
+    <div class="mbox">
+
+        <div class="footer-top">
+
+            <div class="footer-list-wrap">
+                <div class="footer-list-title">NETENT SOFTWEAR</div>
+                <div class="footer-list-main">
+                    <ul>
+                        <li>
+                            <a href="#">NETENT TOUCH</a>
+                        </li>
+                        <li>
+                            <a href="#">LIVE CASINO</a>
+                        </li>
+                        <li>
+                            <a href="#">TABLE GAMES</a>
+                        </li>
+                        <li>
+                            <a href="#">VIDEO SLOTS</a>
+                        </li>
+                        <li>
+                            <a href="#">SLOTS</a>
+                        </li>
+                        <li>
+                            <a href="#">VIDEO POKER</a>
+                        </li>
+                        <li>
+                            <a href="#">SCRATCH CARDS</a>
+                        </li>
+                        <li>
+                            <a href="#">GAMES</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-list-wrap">
+                <div class="footer-list-title">NETENT CASINOS</div>
+                <div class="footer-list-main">
+                    <ul>
+                        <li>
+                            <a href="#">WHAT IS NETENT</a>
+                        </li>
+                        <li>
+                            <a href="#">NETENT TOUCH</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-list-wrap">
+                <div class="footer-list-title">NETENT LIVE CASINO</div>
+                <div class="footer-list-main">
+                    <ul>
+                        <li>
+                            <a href="#">HD LIVE ROULETTE</a>
+                        </li>
+                        <li>
+                            <a href="#">HD LIVE BLACKJACK</a>
+                        </li>
+                        <li>
+                            <a href="#">HD COM. DRAW BLACKJACK</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-list-wrap">
+                <div class="footer-list-title">ONLINE CASINO</div>
+                <div class="footer-list-main">
+                    <ul>
+                        <li>
+                            <a href="#">BETTING</a>
+                        </li>
+                        <li>
+                            <a href="#">ONLINE POKER</a>
+                        </li>
+                        <li>
+                            <a href="#">AFFILIATES</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-list-wrap">
+                <div class="footer-list-title">NETENTCASINO.COM</div>
+                <div class="footer-list-main">
+                    <ul>
+                        <li>
+                            <a href="#">ABOUT US</a>
+                        </li>
+                        <li>
+                            <a href="#">PRIVACY</a>
+                        </li>
+                        <li>
+                            <a href="#">RESPONSIBLE GAMING</a>
+                        </li>
+                        <li>
+                            <a href="#">CONTACT US</a>
+                        </li>
+                        <li>
+                            <a href="#">CONTACT NETENT OFFICIAL</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="footer-bottom">
+
+            <div class="footer-social-links">
+                <a href="#">
+                    <img src="images/footer-fb.png" alt="" />
+                </a>
+                <a href="#">
+                    <img src="images/footer-tw.png" alt="" />
+                </a>
+                <a href="#">
+                    <img src="images/footer-vk.png" alt="" />
+                </a>
+                <a href="#">
+                    <img src="images/footer-gp.png" alt="" />
+                </a>
+            </div>
+
+            <div class="footer-text">
+                <p>Netentcasino.com is not part of, related to or have any commercial relationship with Net entertainment AB</p>
+                <p>Copyright ROYAL BONUSES © 2011 - 2014 All Rights Reserver.</p>
+            </div>
+
+        </div>
+
+    </div>
+
 </footer>
 <!-- FOOTER -->
 
