--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -115,16 +115,16 @@
 
             <div class="footer-social-links">
                 <a href="#">
-                    <img src="images/footer-fb.png" alt="" />
+                    <img src="images/social-1-w.png" alt="" />
                 </a>
                 <a href="#">
-                    <img src="images/footer-tw.png" alt="" />
+                    <img src="images/social-2-w.png" alt="" />
                 </a>
                 <a href="#">
-                    <img src="images/footer-vk.png" alt="" />
+                    <img src="images/social-3-w.png" alt="" />
                 </a>
                 <a href="#">
-                    <img src="images/footer-gp.png" alt="" />
+                    <img src="images/social-4-w.png" alt="" />
                 </a>
             </div>
 
