--- a/src/partials/casino-list.html
+++ b/src/partials/casino-list.html
@@ -326,7 +326,7 @@
     </div>
 </div>
 
-<div class="slice-wrap">
+<div class="slice-wrap slice1">
     <div class="conteiner">
         <div class="title-text">
             <h2>BONUS VIA EMAIL</h2>
@@ -357,7 +357,7 @@
     </div>
 </div>
 
-<div class="slice-wrap">
+<div class="slice-wrap slice2">
     <div class="conteiner">
         <div class="title-text">
             <h2>FEATURED CASINO</h2>
@@ -377,7 +377,7 @@
     </div>
 </div>
 
-<div class="slice-wrap">
+<div class="slice-wrap slice3">
     <div class="conteiner">
         <div class="title-text">
             <h2>BONUS KATEGORIES</h2>
