--- a/src/sass/style_basic.scss
+++ b/src/sass/style_basic.scss
@@ -14,7 +14,7 @@
 /* base styles*/
 *,*:before, *:after{box-sizing:border-box;outline:none;}
 html{height:100%;}
-body{min-height:100%;width:100%;font-family:arial,sans-serif;background:#f7f7f7;color:#656565;position:relative;font-size: 14px;line-height: 1;}
+body{min-height:100%;width:100%;min-width:320px;font-family:arial,sans-serif;background:#f7f7f7;color:#656565;position:relative;font-size: 14px;line-height: 1;}
 img{vertical-align:bottom;border:0;max-width:100%;}
 
 /* /base styles */
