--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,8 +20,21 @@
             <nav>
                 <ul>
                     <li class="active"><a href="#"><span>Home</span></a></li>
-                    <li><a href="#"><span>Bonuses</span></a></li>
-                    <li><a href="#"><span>Casinos</span></a></li>
+                    <li class="menu-item-has-children">
+                        <a href="#"><span>Bonuses</span></a>
+                        <ul>
+                            <li><a href="#"><span>Deposit Bonuses</span></a></li>
+                            <li><a href="#"><span>No Deposit Bonuses</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children">
+                        <a href="#"><span>Casinos</span></a>
+                        <ul>
+                            <li><a href="#"><span>Casino </span></a></li>
+                            <li><a href="#"><span>Soft </span></a></li>
+                            <li><a href="#"><span>Scandinavian </span></a></li>
+                        </ul>
+                    </li>
                     <li><a href="#"><span>Bookies</span></a></li>
                     <li><a href="#"><span>News</span></a></li>
                     <li><a href="#"><span>Subscribe</span></a></li>
@@ -32,9 +45,12 @@
             <div class="social">
                 <ul>
                     <li><a href="#" target="_blank"><img src="images/social-1.png" alt=""></a></li>
-                    <li><a href="#" target="_blank"><img src="images/social-2.png" alt=""></a></li>
-                    <li><a href="#" target="_blank"><img src="images/social-3.png" alt=""></a></li>
-                    <li><a href="#" target="_blank"><img src="images/social-4.png" alt=""></a></li>
+                    <span class="soc-mob">
+                        <span class="green-arrow"></span>
+                        <li><a href="#" target="_blank"><img src="images/social-2.png" alt=""></a></li>
+                        <li><a href="#" target="_blank"><img src="images/social-3.png" alt=""></a></li>
+                        <li><a href="#" target="_blank"><img src="images/social-4.png" alt=""></a></li>
+                    </span>
                 </ul>
             </div>
         </div>
