--- a/src/sass/adaptation_scss/adaptation_develop_4.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_4.scss
@@ -10,6 +10,13 @@
 @media screen and (max-width: 1280px){
 
 }
+@media screen and (max-width: 1190px){
+    /*header*/
+    header{
+        .bottom-head nav{width: 80%;}
+    }
+    /*header*/
+}
 @media screen and (max-width: 1024px){
 
 }
