--- a/src/sass/develop_scss/develop_4.scss
+++ b/src/sass/develop_scss/develop_4.scss
@@ -1,23 +1,58 @@
 /*header*/
-header{
+header{position: relative;z-index: 15;
     .top-head{min-height: 175px;display: flex;align-items: center;justify-content: space-between;flex-wrap: wrap;align-content:center;}
     .logo{position: relative;
         .logo-flag{position: absolute;bottom:14px;right: 0;height: 24px;width: 24px;overflow: hidden;}
     }
-    .bottom-head{display: flex;align-items: center;justify-content: space-between;flex-wrap: wrap;background-color: #fff;border:2px solid #dddddd;
+    .bottom-head{display: flex;align-items: center;justify-content: space-between;flex-wrap: wrap;background-color: #fff;border:2px solid #dddddd;overflow: hidden;
         nav{width: 69%;
             ul{display: table;width: 100%;}
             a{text-decoration: none;font-size: 19px;color: #000000;display: block;padding: 21px 5px;}
-            li{display: table-cell;vertical-align: middle;text-align: center;
+            li{display: table-cell;vertical-align: middle;text-align: center;position: relative;
+                &.menu-item-has-children{
+                        &:after{position: absolute;content: '';width: 10px;height: 8px;top: 50%;right: 7px;transform: translateY(-50%);background: url('../images/header-arrow.png') center center no-repeat;}
+                    &>ul{position: absolute;top: 100%;left: 0;display: block;min-width: 200px;background-color: #fff;border:2px solid #a5d000;opacity: 0;visibility: hidden;z-index: -1;transition: all ease .2s;
+                        li{display: block;text-align: left;
+
+                        }
+                        a{padding: 10px 11px;display: inline-block;
+                            &:hover{
+                                span:after{opacity: 1;}
+                            }
+                            span{position: relative;
+                                &:after{position: absolute;top: 100%;width: 100%;content: '';height: 2px;background-color: #000;left: 0;transition:all ease .2s;opacity: 0;}
+                            }
+                        }
+                    }
+                }
                 &:hover,&.active{background-color: #a5d000;
+                    &.menu-item-has-children{
+                        &:after{background: url('../images/header-arrow-hover.png') center center no-repeat;}
+                    }
                     a{color: white;}
+                    li{background-color: #fff;
+                        a{color: black;}
+                    }
+                }
+                &:hover{
+                    &.menu-item-has-children{
+                        &>ul{opacity: 1;visibility: visible;z-index: 10;}
+                    }
                 }
             }
         }
         .social{width: 20%;overflow: hidden;
-            ul{display: table;width: 100%;}
-            li{display: table-cell;vertical-align: middle;text-align: center;border-left: 2px solid #dddddd;width: 25%;}
-            a{display: block;padding: 17px 10px 18px;}
+            ul{display: flex;align-items: stretch;justify-content: space-between;flex-wrap: wrap;align-content:stretch;height: 61px;}
+            li{text-align: center;border-left: 2px solid #dddddd;width: 25%;position: relative;
+                &:hover{opacity: .7;}
+            }
+            .soc-mob{width: 75%;position: relative;height: 100%;display: flex;align-items: stretch;justify-content: space-between;flex-wrap: wrap;align-content:stretch;
+                li{width: 33.33%;}
+            }
+            .green-arrow{display: none;}
+            a{display: block;position: absolute;top: 0;left: 0;right: 0;bottom:0;
+                img{position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);}
+            }
         }
     }
 }
