--- a/src/partials/casino-list.html
+++ b/src/partials/casino-list.html
@@ -99,7 +99,7 @@
                         <img src="images/rg453.png" alt="">
                     </div>
                     <div class="right-it">
-                        <h5>Online Slots - Play Slots <br> on Mobile & Desktop - 5$ K Bonus </h5>
+                        <h5>Online Slots - Play Slots on Mobile & Desktop - 5$ K Bonus </h5>
                         <p>
                             <span>На странице Fenikss Casino вы сможете сделать выбор из широкого предложения услуг оригинальных игровых автоматов NOVOMATIC. Исключительное право представлять эти автоматы в Латвии есть у Fenikss Casino...</span>
                         </p>
@@ -367,7 +367,7 @@
                 <img src="images/slice1.jpg" alt="">
             </div>
             <div class="texter">
-                <h5>Online Slots - Play Slots <br/> on Mobile & Desktop - 5$ K Bonus </h5>
+                <h5>Online Slots - Play Slots on Mobile & Desktop - 5$ K Bonus </h5>
                 <p>На странице Fenikss Casino вы сможете сделать выбор из широкого предложения услуг оригинальных игровых автоматов На странице Fenikss Casino вы сможете сделать выбор из широкого предложения услуг оригинальных игровых автоматов </p>
                 <div class="convert-butt">
                     <a href="" class="button-green button-now">PLAY NOW</a>
