--- a/src/sass/develop_scss/develop_2.scss
+++ b/src/sass/develop_scss/develop_2.scss
@@ -4,6 +4,8 @@
 
 /* title */
 
+.test{text-decoration: none;}
+
 /* buttons */
 .button-blue{ max-width: 120px; width: 100%; font-size: 14px; font-family: "Arial"; color: rgb(254, 254, 254); font-weight: bold; line-height: 26px; text-transform: uppercase; border-radius: 3px;  background-color: rgb(51, 102, 153); display: block; text-align: center; text-decoration: none; }
 
