--- a/src/partials/login-form.html
+++ b/src/partials/login-form.html
@@ -1,7 +1,7 @@
 <div class="login-form" style="max-width:635px;width:100%;">
 
     <div class="title-text">
-        <h2>RECENT POSTS FROM ALL CATEGORIES</h2>
+        <h2>LOGIN</h2>
     </div>
 
     <div class="form-class">
