--- a/src/sass/develop_scss/develop_1.scss
+++ b/src/sass/develop_scss/develop_1.scss
@@ -58,7 +58,14 @@
                 }
             }
         }
-
+        .form-socials{padding-bottom: 20px;padding-top: 35px;
+            .form-socials-text{font-size: 12px;color:#336699;text-align: center;margin-bottom: 15px;}
+            .form-socials-wrap{display: flex;justify-content:center;
+                a{display: flex;justify-content:center;align-items:center;width:36px;height: 36px;margin:0 5px;background-color: #b3b3b3;border:1px solid #e4e4e4;border-radius:2px;transition:background-color 300ms ease, border-color 300ms ease;
+                    &:hover{background-color: orange;border-color:orange;}
+                }
+            }
+        }
     }
 
 /* /form */
