checkpoint (i hate our designers)

--- a/src/partials/login-form.html
+++ b/src/partials/login-form.html
@@ -1,4 +1,4 @@
-<div class="login-form" style="max-width:635px;width:100%;">
+<div class="login-form">
 
     <div class="title-text">
         <h2>LOGIN</h2>
