--- a/src/partials/registration-form.html
+++ b/src/partials/registration-form.html
@@ -1,4 +1,4 @@
-<div class="registration-form" style="max-width:635px;width:100%;">
+<div class="registration-form">
 
     <div class="title-text">
         <h2>REGISTRATION</h2>
