--- a/src/sass/develop_scss/develop_1.scss
+++ b/src/sass/develop_scss/develop_1.scss
@@ -69,3 +69,19 @@
     }
 
 /* /form */
+
+/* ragistration-message */
+
+    .registration-message{background-color:#fff;
+        .registration-message-wrap{padding:25px 20px 20px 20px;
+            .registration-message-title{font-weight: 700;font-size: 18px;color:#336699;text-transform: uppercase;margin-bottom: 20px;line-height: 22px;}
+            .registration-message-text{font-size: 14px;color:#336699;line-height: 20px;margin-bottom: 27px;}
+            .registration-message-link{
+                .button-blue{max-width: 280px;width: 100%;height: 50px;line-height: 50px;font-size: 16px;
+                    &:hover{background-color: orange;}
+                }
+            }
+        }
+    }
+
+/* /registration-mesage */
