--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,6 +17,7 @@
             </div>
         </div>
         <div class="bottom-head">
+            <div class="mobile-button"><span></span></div>
             <nav>
                 <ul>
                     <li class="active"><a href="#"><span>Home</span></a></li>
@@ -44,12 +45,12 @@
             </nav>
             <div class="social">
                 <ul>
-                    <li><a href="#" target="_blank"><img src="images/social-1.png" alt=""></a></li>
+                    <li><a href="#" target="_blank"><img src="images/social-1.png" alt=""><img src="images/social-1-w.png" alt="" class="mobile-show"></a></li>
                     <span class="soc-mob">
                         <span class="green-arrow"></span>
-                        <li><a href="#" target="_blank"><img src="images/social-2.png" alt=""></a></li>
-                        <li><a href="#" target="_blank"><img src="images/social-3.png" alt=""></a></li>
-                        <li><a href="#" target="_blank"><img src="images/social-4.png" alt=""></a></li>
+                        <li><a href="#" target="_blank"><img src="images/social-2.png" alt=""><img src="images/social-2-w.png" alt="" class="mobile-show"></a></li>
+                        <li><a href="#" target="_blank"><img src="images/social-3.png" alt=""><img src="images/social-3-w.png" alt="" class="mobile-show"></a></li>
+                        <li><a href="#" target="_blank"><img src="images/social-4.png" alt=""><img src="images/social-4-w.png" alt="" class="mobile-show"></a></li>
                     </span>
                 </ul>
             </div>
