--- a/src/sass/adaptation_scss/adaptation_develop_4.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_4.scss
@@ -25,11 +25,11 @@
         .bottom-head nav{width: calc(100% - 66px);}
         .bottom-head .social{width: 65px;overflow: inherit;position: relative;
             ul{display: block;}
-            &>ul li{width: 100%;height: 100%;border-bottom:2px solid #dddddd;}
+            &>ul li{width: 100%;height: 100%;}
 
             .soc-mob{width: 100%;position: absolute;display: block;top: 100%;left: 0;height: 100%;
                 .green-arrow{position: absolute;display: block;top: 0;left: 0;width: 100%;border-left: 33px solid transparent;border-right: 33px solid transparent;border-top: 15px solid #a5d000;z-index: 25;height: 15px;}
-                li{width: 100%;height: 100%;background-color: #fff;
+                li{width: 100%;height: 100%;background-color: #fff;border-bottom:2px solid #dddddd;display: none;
                     &:hover{opacity: 1;}
                 }
             }
@@ -42,7 +42,54 @@
     /*header*/
 }
 @media screen and (max-width: 992px){
+    header .bottom-head nav li.menu-item-has-children:after{display: none;}
+}
+@media screen and (max-width: 888px){
 
+}
+@media screen and (max-width: 768px){
+    /*header*/
+    header{
+        .top-head{padding-top: 60px;min-height: 345px;}
+        .bottom-head{position: absolute;top: 0;left: 0;width: 100%;height: 60px;background-color: #5b5b5b;border:none;padding: 0 10px;
+            .mobile-button{display: block;height: 100%;width: 40px;position: relative;cursor: pointer;
+                &.active{
+                    span{opacity: 0;}
+                    &:before{transform: translateY(-50%) rotate(45deg);top: 50%;}
+                    &:after{transform: translateY(-50%) rotate(-45deg);top: 50%;}
+                }
+                &:after,&:before,span{position: absolute;left: 0;content: '';top: 50%;width: 30px;height: 3px;background-color: #fff;transform: translateY(-50%);transition:all ease-out .2s;}
+                &:after{top: 65%;}
+                &:before{top: 35%;}
+            }
+        }
+        .bottom-head nav{position: absolute;top: 100%;left: 0;display: none;width: 100%;background-color: #fff;height:auto;
+            ul{display: block;}
+            li{display: block;background-color: #fff;
+                &:hover,&.active{background-color: transparent;
+                    a{color: #a5d000;}
+                }
+            }
+            li:hover.menu-item-has-children > ul{display: none;opacity: 1;visibility: visible;}
+            a{padding: 16px 5px;}
+        }
+
+        .bottom-head .social{width: 35%;
+            ul{display: flex;}
+            &>ul li{width: 25%;border:none;}
+
+            .soc-mob{width: 75%;position: static;display: flex;
+                .green-arrow{display: none;}
+                li{display: block !important;width: 33.33%;background-color: transparent;border:none;}
+            }
+            .green-arrow{}
+            a{
+                img{display: none;}
+                img.mobile-show{display: block;}
+            }
+        }
+    }
+    /*header*/
 }
 @media screen and (max-width: 767px){
 
