--- a/src/sass/adaptation_scss/adaptation_develop_1.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_1.scss
@@ -51,11 +51,42 @@
 
         .footer{
             .footer-top{
-                .footer-list-wrap{width: 50%;}
+                .footer-list-wrap{width: 50%;font-size: 20px;line-height: 30px;}
+            }
+            .footer-bottom{
+               .footer-text{font-size: 20px;line-height: 28px;}
             }
         }
 
     /* /footer */
+
+    /* form */
+
+        .form-class{
+            .form-class-title{font-size: 32px;}
+            .form-class-subtitle{font-size: 24px;}
+            .form_row{
+                .form_input{
+                    input{height: 100%;line-height: 100px;font-size: 28px;
+                        &::-webkit-input-placeholder {font-size: 28px;}
+                        &:-moz-placeholder {font-size: 28px;}
+                        &::-moz-placeholder {font-size: 28px;}
+                        &:-ms-input-placeholder {font-size: 28px;}
+                    }
+                    .errorText{font-size: 20px;}
+                }
+            }
+            .button-green, .button-blue{font-size: 28px;line-height: 100px;height: 100px;}
+            .form-links{font-size: 24px;}
+            .form-socials{
+                .form-socials-text{font-size: 24px;}
+                .form-socials-wrap{
+                    a{width: 51px;height: 51px;}
+                }
+            }
+        }
+
+    /* /form */
 
     /* registration-message */
 
@@ -69,10 +100,54 @@
             }
         }
 
-    /* /geristration-message */
+    /* /registration-message */
 
 }
 @media screen and (max-width: 479px){
+
+    /* footer */
+
+        .footer{
+            .footer-top{
+                .footer-list-wrap{font-size: 10px;line-height: 16px;}
+            }
+            .footer-bottom{
+                .footer-social-links{
+                    a{width: 40px;height: 40px;}
+                }
+               .footer-text{font-size: 10px;line-height: 16px;}
+            }
+        }
+
+    /* /footer */
+
+    /* form */
+
+        .form-class{
+            .form-class-title{font-size: 16px;}
+            .form-class-subtitle{font-size: 12px;}
+            .form_row{
+                .form_input{
+                    input{line-height: 50px;font-size: 14px;
+                        &::-webkit-input-placeholder {font-size: 14px;}
+                        &:-moz-placeholder {font-size: 14px;}
+                        &::-moz-placeholder {font-size: 14px;}
+                        &:-ms-input-placeholder {font-size: 14px;}
+                    }
+                    .errorText{font-size: 10px;}
+                }
+            }
+            .button-green, .button-blue{line-height: 50px;height: 50px;font-size: 14px;}
+            .form-links{font-size: 12px;}
+            .form-socials{
+                .form-socials-text{font-size: 12px;}
+                .form-socials-wrap{
+                    a{width: 36px;height: 36px;}
+                }
+            }
+        }
+
+    /* /form */
 
     /* registration-message */
 
@@ -86,7 +161,7 @@
             }
         }
 
-    /* /geristration-message */
+    /* /registration-message */
 
 }
 @media screen and (max-width: 320px){
