--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,6 +5,7 @@
             <div class="logo">
                 <a href="#">
                     <img src="images/logo.png" alt="">
+                    <img src="images/logo-640.png" alt="" class="logo-mobile">
                     <span class="logo-flag">
                         <img src="images/flags/Sweden.png" alt="">
                     </span>
