--- a/src/sass/adaptation_scss/adaptation_develop_4.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_4.scss
@@ -49,7 +49,8 @@
 }
 @media screen and (max-width: 768px){
     /*header*/
-    header{
+    header{position: relative;
+        &>.mbox{position: static;}
         .top-head{padding-top: 60px;min-height: 345px;}
         .bottom-head{position: absolute;top: 0;left: 0;width: 100%;height: 60px;background-color: #5b5b5b;border:none;padding: 0 10px;
             .mobile-button{display: block;height: 100%;width: 40px;position: relative;cursor: pointer;
@@ -65,13 +66,17 @@
         }
         .bottom-head nav{position: absolute;top: 100%;left: 0;display: none;width: 100%;background-color: #fff;height:auto;
             ul{display: block;}
+            li.menu-item-has-children > ul li{text-align: center;}
             li{display: block;background-color: #fff;
                 &:hover,&.active{background-color: transparent;
                     a{color: #a5d000;}
+                    .mobile-head-arrow{background: url("../images/header-arrow-green.png") center left no-repeat;}
                 }
             }
+            li.menu-item-has-children > ul{max-width: 210px;left: 50%;transform: translateX(-50%);}
             li:hover.menu-item-has-children > ul{display: none;opacity: 1;visibility: visible;}
-            a{padding: 16px 5px;}
+            a{padding: 16px 7px;display: inline-block;position: relative;}
+            .mobile-head-arrow{position: absolute;top: 0;left: 100%;height: 100%;width: 40px;background-color: pink;background: url("../images/header-arrow.png") center left no-repeat;}
         }
 
         .bottom-head .social{width: 35%;
@@ -94,12 +99,44 @@
 @media screen and (max-width: 767px){
 
 }
-@media screen and (max-width: 666px){
-
+@media screen and (max-width: 640px){
+    /*header*/
+    header{
+        .bottom-head{height: 115px;padding: 0 30px;}
+        .bottom-head .mobile-button{width: 60px;
+            &:after,&:before,span{width: 50px;}
+        }
+        .bottom-head .social{width: 55%;
+            a img{transform: translate(-50%, -50%) scale(1.4);}
+        }
+        .top-head{min-height: 423px;padding-top: 115px;}
+        .logo{
+            a>img{display: none;}
+            img.logo-mobile{display: block;}
+            .logo-flag{bottom: 20px;right: 4px;}
+        }
+        .bottom-head nav a{font-size: 28px;padding: 13px 7px;}
+        .bottom-head nav li.active a{font-weight: bold;}
+        .bottom-head nav li.menu-item-has-children > ul{max-width: 290px;}
+    }
+    /*/heade*/
 }
 @media screen and (max-width: 479px){
 
 }
 @media screen and (max-width: 320px){
-
+    /*header*/
+    header{
+        .bottom-head{height: 60px;padding: 0 15px;}
+        .top-head{min-height: 270px;padding-top: 60px;}
+        .logo img.logo-mobile{max-height: 96px;}
+        .logo .logo-flag{bottom: 10px;right: -2px;}
+        .bottom-head .social a img{transform: translate(-50%, -50%) scale(1);}
+        .bottom-head .social{width: 60%;}
+        .bottom-head .mobile-button{width: 40px;
+            &:after,&:before,span{width: 25px;}
+        }
+        .bottom-head nav a{font-size: 14px;}
+    }
+    /*/header*/
 }
