--- a/src/sass/develop_scss/develop_2.scss
+++ b/src/sass/develop_scss/develop_2.scss
@@ -14,16 +14,16 @@
 
 
 /* paginator */
-.paginator{ text-align: center; padding: 40px 0 20px;
-    span, a{display: inline-block; vertical-align: middle; min-width: 25px; padding: 0 4px; height: 25px;  line-height: 25px; text-decoration: none; background-image: -moz-linear-gradient( 90deg, #bebebe 0%, #bebebe 0%, #bebebe 100%); background-image: -webkit-linear-gradient( 90deg, #bebebe 0%, #bebebe 0%, #bebebe 100%); background-image: -ms-linear-gradient( 90deg, #bebebe 0%, #bebebe 0%, #bebebe 100%); transition: all 2s; margin: 0 3px; font-size: 16px; font-family: "Arial", sans-serif; color: rgb(255, 255, 255); font-weight: bold;
+.paginator{ text-align: center; padding: 40px 0 40px;
+    span, a{display: inline-block; vertical-align: middle; min-width: 25px; padding: 0 4px; min-height: 25px;  line-height: 25px; text-decoration: none; background-image: -moz-linear-gradient( 90deg, #bebebe 0%, #bebebe 0%, #bebebe 100%); background-image: -webkit-linear-gradient( 90deg, #bebebe 0%, #bebebe 0%, #bebebe 100%); background-image: -ms-linear-gradient( 90deg, #bebebe 0%, #bebebe 0%, #bebebe 100%); transition: all 2s; margin: 0 3px; font-size: 16px; font-family: "Arial", sans-serif; color: rgb(255, 255, 255); font-weight: bold;
         &:hover, &.current{background-image: -moz-linear-gradient( 90deg, rgb(56,159,0) 0%, rgb(146,183,0) 0%, rgb(180,226,1) 100%); background-image: -webkit-linear-gradient( 90deg, rgb(56,159,0) 0%, rgb(146,183,0) 0%, rgb(180,226,1) 100%); background-image: -ms-linear-gradient( 90deg, rgb(56,159,0) 0%, rgb(146,183,0) 0%, rgb(180,226,1) 100%);}
     }
 
-    a.previouspostslink{ margin-right: 20px; min-width: 10px; width: 10px; height: 12px; position: relative; padding: 0;
+    a.previouspostslink{ margin-right: 20px; min-width: 10px; width: 10px; min-height: 12px; position: relative; padding: 0;
         &:before{content: ''; width: 0; height: 0; border-style: solid; border-width: 6px 10px 0 0; border-color: white transparent transparent transparent; position: absolute; top: 0; left: 0;}
         &:after{content: ''; width: 0; height: 0; border-style: solid; border-width: 6px 0 0 10px; border-color: transparent transparent transparent white;  position: absolute; bottom: 0; left: 0;}
     }
-    a.nextpostslink{ margin-left: 20px; min-width: 10px; width: 10px; height: 12px; position: relative; padding: 0;
+    a.nextpostslink{ margin-left: 20px; min-width: 10px; width: 10px; min-height: 12px; position: relative; padding: 0;
         &:before{content: ''; width: 0; height: 0; border-style: solid; border-width: 0 10px 6px 0; border-color: transparent white transparent transparent; position: absolute; top: 0; left: 0;}
         &:after{content: ''; width: 0; height: 0; border-style: solid; border-width: 0 0 6px 10px; border-color: transparent transparent white transparent; position: absolute; bottom: 0; left: 0;}
     }
@@ -31,8 +31,8 @@
 /* paginator */
 
 .super-stat{background-color: white;border: 2px solid #dddddd;border-top: 0px solid #dddddd;  margin-top: -2px; position: relative; overflow: hidden;
-    &:before{content: ''; position: absolute; left: calc(50% - 2px); top: 0; bottom: 0; width: 2px; background-color: #dddddd;}
-    &:after{content: ''; position: absolute; left: calc(75% ); top: 0; bottom: 0; width: 2px; background-color: #dddddd;}
+    &:before{content: ''; position: absolute; left: calc(50% - 2px); top: 0; bottom: 0; width: 2px; background-color: #dddddd; z-index: 11;}
+    &:after{content: ''; position: absolute; left: calc(75% ); top: 0; bottom: 0; width: 2px; background-color: #dddddd; z-index: 11;}
 }
 
 /* first-colom */
@@ -86,7 +86,8 @@
 
 /* slice-colom */
 
-.slice-wrap{  width: 25%; float: left; border-left: 2px solid transparent; background-color: #ffffff;
+.slice-wrap{ position: relative; width: 25%; float: left; border-left: 2px solid transparent; background-color: #ffffff;z-index: 10;
+    &:after{content: ''; position: absolute; z-index: 1; left: 0; right: 0; bottom: -100vh; height: 100vh; background-color: white;}
     .content{ padding: 30px 20px; text-align: center; background-color: white; position: relative;
         p.look-smile{ position: absolute; top: 0; left: 50%; transform: translateX(-50%); height: 50px; width: 80%; font-size: 14px; font-family: "Arial", sans-serif; font-style: italic;  line-height: 1.2; z-index: -1; top: 30%; }
         .bonus-email{
