--- a/src/partials/statistic-list.html
+++ b/src/partials/statistic-list.html
@@ -6,10 +6,18 @@
 
     <div class="statistic-list-main">
 
-        <div class="statistic-content">
+        <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" data-green=4.05 data-blue=3.3>
+
+                    <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
+                    <circle cx="65" cy="65" r="49" stroke="#e6e6e6" stroke-width="8" fill="none" />
+
+                    <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
+                    <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+
+                </svg>
             </div>
 
             <div class="statistic-content-logo">
@@ -25,7 +33,7 @@
                 <div class="static-info-title">Super Mega Casino Rewiew</div>
                 <div class="static-info-top">
                     <div class="static-info-flag">
-                        <img src="images/Sweden.png" alt="" />
+                        <img src="images/flags/Sweden.png" alt="" />
                     </div>
                     <div class="static-info-top-text">Players from your country accepted</div>
                 </div>
@@ -45,14 +53,22 @@
 
         </div>
 
-        <div class="statistic-content">
+        <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg></svg>
+                <svg xmlns="http://www.w3.org/2000/svg">
+
+                    <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
+                    <circle cx="65" cy="65" r="49" stroke="#e6e6e6" stroke-width="8" fill="none" />
+
+                    <circle cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
+                    <circle cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+
+                </svg>
             </div>
 
             <div class="statistic-content-logo">
-                <div class="statistic-logo-text orange-logo-text">
+                <div class="statistic-logo-text red-logo-text">
                     <span>new</span>
                 </div>
                 <div class="satistic-img">
@@ -64,7 +80,7 @@
                 <div class="static-info-title">Super Mega Casino Rewiew</div>
                 <div class="static-info-top">
                     <div class="static-info-flag">
-                        <img src="images/Sweden.png" alt="" />
+                        <img src="images/flags/Sweden.png" alt="" />
                     </div>
                     <div class="static-info-top-text">Players from your country accepted</div>
                 </div>
@@ -84,10 +100,18 @@
 
         </div>
 
-        <div class="statistic-content">
+        <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg></svg>
+                <svg xmlns="http://www.w3.org/2000/svg">
+
+                    <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
+                    <circle cx="65" cy="65" r="49" stroke="#e6e6e6" stroke-width="8" fill="none" />
+
+                    <circle cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
+                    <circle cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+
+                </svg>
             </div>
 
             <div class="statistic-content-logo">
@@ -100,7 +124,7 @@
                 <div class="static-info-title">Super Mega Casino Rewiew</div>
                 <div class="static-info-top">
                     <div class="static-info-flag">
-                        <img src="images/Sweden.png" alt="" />
+                        <img src="images/flags/Sweden.png" alt="" />
                     </div>
                     <div class="static-info-top-text">Players from your country accepted</div>
                 </div>
@@ -120,10 +144,18 @@
 
         </div>
 
-        <div class="statistic-content">
+        <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg></svg>
+                <svg xmlns="http://www.w3.org/2000/svg">
+
+                    <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
+                    <circle cx="65" cy="65" r="49" stroke="#e6e6e6" stroke-width="8" fill="none" />
+
+                    <circle cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
+                    <circle cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+
+                </svg>
             </div>
 
             <div class="statistic-content-logo">
@@ -136,7 +168,7 @@
                 <div class="static-info-title">Super Mega Casino Rewiew</div>
                 <div class="static-info-top">
                     <div class="static-info-flag">
-                        <img src="images/Sweden.png" alt="" />
+                        <img src="images/flags/Sweden.png" alt="" />
                     </div>
                     <div class="static-info-top-text">Players from your country accepted</div>
                 </div>
