--- a/src/sass/develop_scss/develop_4.scss
+++ b/src/sass/develop_scss/develop_4.scss
@@ -60,3 +60,21 @@ header{position: relative;z-index: 15;
     }
 }
 /*/header*/
+
+/*main-baner*/
+.main-baner{overflow: hidden;
+    .mbox{
+        &:after,&:before{width: 100%;height: 100%;content: '';position: absolute;top: 0;right: calc(100% - 10px);background: url('../images/main-baner-left.jpg') center right no-repeat;}
+        &:before{right: auto;left: calc(100% - 10px);background: url('../images/main-baner-left.jpg') center right no-repeat;transform: scale(-1,1);}
+    }
+    .main-baner-wrap{background-color: #2b2b2b;padding: 40px 38px;height: 610px;}
+    .main-baner-wrapper{height: 100%;border:3px solid #8f8f8f;}
+    .item{width: 37%;float: left;height: 100%;position: relative;overflow: hidden;
+        &.big{width: 63%;border-right: 3px solid #8f8f8f;}
+        img{position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);max-width: none;}
+    }
+    .sub-item{width: 100%;height: 50%;position: relative;overflow: hidden;
+        &:first-child{border-bottom: 3px solid #8f8f8f;}
+    }
+}
+/*/main-baner*/
