statistic static added

--- a/src/partials/statistic-list.html
+++ b/src/partials/statistic-list.html
@@ -9,13 +9,16 @@
         <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg" data-green=4.05 data-blue=3.3>
+                <svg xmlns="http://www.w3.org/2000/svg" data-green=1.25 data-blue=1.25>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
-                    <circle cx="65" cy="65" r="49" stroke="#e6e6e6" stroke-width="8" fill="none" />
+                    <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
 
                     <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
                     <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+
+                    <text class="green-text"></text>
+                    <text class="blue-text"></text>
 
                 </svg>
             </div>
@@ -56,13 +59,13 @@
         <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg">
+                <svg xmlns="http://www.w3.org/2000/svg" data-green=2.5 data-blue=2.5>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
-                    <circle cx="65" cy="65" r="49" stroke="#e6e6e6" stroke-width="8" fill="none" />
+                    <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
 
-                    <circle cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
-                    <circle cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+                    <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
+                    <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
 
                 </svg>
             </div>
@@ -103,13 +106,13 @@
         <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg">
+                <svg xmlns="http://www.w3.org/2000/svg" data-green=3.75 data-blue=3.75>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
-                    <circle cx="65" cy="65" r="49" stroke="#e6e6e6" stroke-width="8" fill="none" />
+                    <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
 
-                    <circle cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
-                    <circle cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+                    <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
+                    <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
 
                 </svg>
             </div>
@@ -147,13 +150,13 @@
         <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg">
+                <svg xmlns="http://www.w3.org/2000/svg" data-green=5 data-blue=5>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
-                    <circle cx="65" cy="65" r="49" stroke="#e6e6e6" stroke-width="8" fill="none" />
+                    <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
 
-                    <circle cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
-                    <circle cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+                    <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
+                    <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
 
                 </svg>
             </div>
